# esgf-virtual-zarr-data-access

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  myst.yml  pyproject.toml  requirements.txt  virtual-zarr-script.py
.github/workflows/: deploy-docs.yml  tests.yaml
docs/: contributing.md  getting-started.md  index.md
envs/: icechunk_env.yaml  reader_env.yaml
notebooks/: 2026_cmip_workshop_arco_example_gh.ipynb  id-test-datasets.ipynb  proof-of-concept.ipynb  proof-of-concept.py  virtualizarr_V2_example.ipynb
reference_generation/: netcdf4_s3_icechunk.py
refs/netcdf4_s3_icechunk.parquet/: .zmetadata
refs/netcdf4_s3_icechunk.parquet/i/: refs.0.parq
refs/netcdf4_s3_icechunk.parquet/j/: refs.0.parq
refs/netcdf4_s3_icechunk.parquet/latitude/: refs.0.parq
refs/netcdf4_s3_icechunk.parquet/lev/: refs.0.parq
refs/netcdf4_s3_icechunk.parquet/lev_bnds/: refs.0.parq
refs/netcdf4_s3_icechunk.parquet/longitude/: refs.0.parq
refs/netcdf4_s3_icechunk.parquet/time/: refs.0.parq
refs/netcdf4_s3_icechunk.parquet/time_bnds/: refs.0.parq
refs/netcdf4_s3_icechunk.parquet/uo/: refs.0.parq
refs/netcdf4_s3_icechunk.parquet/vertices_latitude/: refs.0.parq
refs/netcdf4_s3_icechunk.parquet/vertices_longitude/: refs.0.parq
refs/netcdf4_s3_icechunk/refs/branch.main/: ZZZZZZZY.json  ZZZZZZZZ.json
refs/netcdf4_s3_icechunk/snapshots/: FPE0KG1ZFVQBWJNANW0G  M8XKZ85VEXS4XXBBR6N0
tests/: test_script.py
