[project]
name = "esgf-virtual-zarr-data-access"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.7.3",
    "distributed>=2025.7.0",
    "h5netcdf>=1.6.4",
    "h5py>=3.14.0",
    "icechunk>=1.1.1",
    "ipykernel>=6.30.1",
    "netcdf4>=1.7.2",
    "pre-commit>=4.3.0",
    "virtualizarr>=2.0.1",
]
